Playwright POM pipeline for CI modified

--- a/.github/workflows/playwright-pom-ci.yml
+++ b/.github/workflows/playwright-pom-ci.yml
@@ -3,10 +3,10 @@ name: Playwright POM Tests CI
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   test:
