--- a/.github/workflows/playwright-pom-ci.yml
+++ b/.github/workflows/playwright-pom-ci.yml
@@ -1,4 +1,4 @@
-name: Playwright POM Tests CI
+name: Playwright POM Tests CI (Lint & Build Only)
 
 on:
   push:
@@ -9,30 +9,23 @@ on:
       - master
 
 jobs:
-  test:
+  lint-and-build:
     runs-on: ubuntu-latest
 
     steps:
-      - name:  Checkout repository
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      - name:  Setup Node.js
+      - name: 🟩 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name:  Install dependencies
-        run: npm ci
+      - name: 📦 Install dependencies
+        run: npm install
 
-      - name:  Install Playwright browsers
-        run: npx playwright install --with-deps
+      - name: 🧹 Run linter
+        run: npm run lint
 
-      - name: ▶ Run Playwright POM tests
-        run: npx playwright test tests/ --trace on --reporter=html
-
-      - name:  Upload Playwright report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report/
+      - name: 🛠 Check build (optional)
+        run: npm run build
