--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "playwright test",
+    "test:bdd": "npx cucumber-js --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json features/**/*.feature",
+    "generate:report": "node cucumber-html-report.js",
+    "test:feature": "npm run test:bdd --",
+    "test:debug": "npx cucumber-js --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts features/**/*.feature --format @cucumber/pretty-formatter --publish-quiet"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^12.1.0",
+    "@cucumber/pretty-formatter": "^2.0.1",
     "@eslint/js": "^9.30.1",
     "@playwright/test": "^1.54.1",
-    "@types/node": "^24.0.13",
+    "@types/node": "^24.1.0",
+    "cucumber-html-reporter": "^7.2.0",
     "eslint": "^9.30.1",
     "globals": "^16.3.0",
     "playwright": "^1.53.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0"
   }
 }
