feat(bdd): add vCard contact import feature - view contact feature - import contact  with POM and Cucumber steps

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "test": "playwright test",
-    "test:bdd": "npx cucumber-js --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json features/**/*.feature",
+    "test:bdd": "npx cucumber-js --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json",
     "generate:report": "node cucumber-html-report.js",
     "test:feature": "npm run test:bdd --",
     "test:debug": "npx cucumber-js --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts features/**/*.feature --format @cucumber/pretty-formatter --publish-quiet"
