--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "test:bdd": "npx cucumber-js --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json",
     "test:account": "npx cucumber-js features/account --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json",
     "test:contact": "npx cucumber-js features/contact --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json",
-    "test:lead": "npx cucumber-js features/lead --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json",
     "test:opportunity": "npx cucumber-js features/opportunity --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json",
+    "test:lead:valid": "npx cucumber-js features/lead/valid --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json",
     "test:lead:unhappy": "npx cucumber-js features/lead/unhappy --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json ",
+    "test:lead:e2e": "npx cucumber-js features/lead/e2e --require-module ts-node/register --require support/hooks.ts --require steps/**/*.ts --format json:cucumber-report.json ",
     "inject:tags": "node tag-injector.js",
     "generate:report": "node cucumber-html-report.js",
     "test:feature": "npm run test:bdd --",
